add api delete user
